Update java version to 19